--- a/input.css
+++ b/input.css
@@ -3,3 +3,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+    @apply bg-green-950 font-Jost text-white tracking-wider;
+}
+
+.nav-link{
+    @apply text-lg font-bold duration-300;
+}
+
+.nav-link:hover{
+    @apply text-yellow-500
+}
