--- a/input.css
+++ b/input.css
@@ -17,12 +17,24 @@ h1{
     @apply text-3xl md:text-4xl lg:text-5xl font-bold;
 }
 
+h2{
+    @apply text-2xl md:text-3xl lg:text-4xl;
+}
+
+h3{
+    @apply text-xl md:text-2xl lg:text-3xl;
+}
+
 .nav-link{
     @apply text-lg font-bold duration-300;
 }
 
 .nav-link:hover{
     @apply text-yellow-500;
+}
+
+.title{
+    @apply text-yellow-500 font-Lobster;
 }
 
 /* button */
