--- a/output.css
+++ b/output.css
@@ -614,6 +614,10 @@ video {
   right: -2.5rem;
 }
 
+.-right-12{
+  right: -3rem;
+}
+
 .-top-5{
   top: -1.25rem;
 }
@@ -654,10 +658,6 @@ video {
   top: 50%;
 }
 
-.-right-12{
-  right: -3rem;
-}
-
 .-z-10{
   z-index: -10;
 }
@@ -673,6 +673,30 @@ video {
 
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-40{
+  margin-bottom: 10rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mb-52{
+  margin-bottom: 13rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mb-44{
+  margin-bottom: 11rem;
+}
+
+.mb-48{
+  margin-bottom: 12rem;
 }
 
 .flex{
@@ -707,16 +731,20 @@ video {
   width: 8rem;
 }
 
+.w-40{
+  width: 10rem;
+}
+
+.w-56{
+  width: 14rem;
+}
+
 .w-64{
   width: 16rem;
 }
 
 .w-full{
   width: 100%;
-}
-
-.w-40{
-  width: 10rem;
 }
 
 .max-w-2xl{
@@ -828,6 +856,15 @@ video {
   gap: 2rem;
 }
 
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.gap-y-36{
+  row-gap: 9rem;
+}
+
 .space-y-10 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -852,6 +889,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -864,6 +905,11 @@ video {
 .bg-green-700{
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.bg-green-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
 }
 
 .bg-green-950{
@@ -880,13 +926,41 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-yellow-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-5{
   padding: 1.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
 }
 
 .text-center{
@@ -931,6 +1005,15 @@ video {
   font-weight: 700;
 }
 
+.italic{
+  font-style: italic;
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .text-green-900{
   --tw-text-opacity: 1;
   color: rgb(20 83 45 / var(--tw-text-opacity));
@@ -959,12 +1042,12 @@ video {
   opacity: 0.4;
 }
 
-.opacity-90{
-  opacity: 0.9;
-}
-
 .opacity-50{
   opacity: 0.5;
+}
+
+.opacity-90{
+  opacity: 0.9;
 }
 
 .blur-3xl{
@@ -980,6 +1063,10 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 body{
@@ -1112,6 +1199,10 @@ h3{
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.popular__card:hover img{
+  top: -2rem;
+}
+
 .hover\:-translate-y-1:hover{
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1155,6 +1246,10 @@ h3{
 @media (min-width: 540px){
   .md\:mb-20{
     margin-bottom: 5rem;
+  }
+
+  .md\:mb-28{
+    margin-bottom: 7rem;
   }
 
   .md\:w-52{
