added review section

--- a/output.css
+++ b/output.css
@@ -658,6 +658,10 @@ video {
   top: 50%;
 }
 
+.-left-12{
+  left: -3rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -675,28 +679,20 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mb-40{
-  margin-bottom: 10rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.mb-52{
-  margin-bottom: 13rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-44{
-  margin-bottom: 11rem;
-}
-
 .mb-48{
   margin-bottom: 12rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mb-20{
+  margin-bottom: 5rem;
 }
 
 .flex{
@@ -709,6 +705,10 @@ video {
 
 .hidden{
   display: none;
+}
+
+.h-12{
+  height: 3rem;
 }
 
 .h-16{
@@ -725,6 +725,10 @@ video {
 
 .min-h-\[80vh\]{
   min-height: 80vh;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-32{
@@ -939,6 +943,10 @@ video {
   padding: 1.25rem;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -947,6 +955,11 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .py-20{
@@ -976,6 +989,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
@@ -1003,6 +1021,10 @@ video {
 
 .font-bold{
   font-weight: 700;
+}
+
+.uppercase{
+  text-transform: uppercase;
 }
 
 .italic{
@@ -1201,6 +1223,13 @@ h3{
 
 .popular__card:hover img{
   top: -2rem;
+}
+
+.swiper-pagination-bullet{
+  height: 0.75rem;
+  width: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .hover\:-translate-y-1:hover{
