--- a/input.css
+++ b/input.css
@@ -36,6 +36,10 @@ h3{
     @apply text-yellow-500;
 }
 
+.active{
+    @apply text-yellow-500;
+}
+
 .title{
     @apply text-yellow-500 font-Lobster;
 }
