--- a/output.css
+++ b/output.css
@@ -606,6 +606,10 @@ video {
   position: relative;
 }
 
+.-bottom-1\/2{
+  bottom: -50%;
+}
+
 .-left-12{
   left: -3rem;
 }
@@ -672,14 +676,6 @@ video {
 
 .top-1\/2{
   top: 50%;
-}
-
-.-bottom-4{
-  bottom: -1rem;
-}
-
-.-bottom-1\/2{
-  bottom: -50%;
 }
 
 .-z-10{
@@ -1222,10 +1218,6 @@ video {
   transition-duration: 500ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
-}
-
 html{
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -1318,6 +1310,11 @@ h3{
 }
 
 .nav-link:hover{
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.active{
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
